--- a/sftp-config.json
+++ b/sftp-config.json
@@ -19,7 +19,7 @@
     "password": "pass@!word",
     "port": "21",
     
-    "remote_path": "/public_html/wp-content/themes/sage",
+    "remote_path": "/public_html/tempkpctampa.org/wp-content/themes/sage",
     "ignore_regexes": [
         "\\.sublime-(project|workspace)", "sftp-config(-alt\\d?)?\\.json",
         "sftp-settings\\.json", "/venv/", "\\.svn/", "\\.hg/", "\\.git/",
